--- a/archives/toutiao-search/2023-10-22.md
+++ b/archives/toutiao-search/2023-10-22.md
@@ -1,52 +1,75 @@
 # 2023-10-22
 
-共 327 条
+共 347 条
 
 <!-- BEGIN TOUTIAO -->
-<!-- 最后更新时间 Sun Oct 22 2023 21:01:37 GMT+0800 (China Standard Time) -->
+<!-- 最后更新时间 Sun Oct 22 2023 22:01:01 GMT+0800 (China Standard Time) -->
 1. [菲律宾船擅闯仁爱礁 擦碰我舰舰艏](https://so.toutiao.com/search?keyword=菲律宾船擅闯仁爱礁+擦碰我舰舰艏)
-1. [直击杭州亚残运会开幕式](https://so.toutiao.com/search?keyword=直击杭州亚残运会开幕式)
-1. [杭州亚残运会备受期待](https://so.toutiao.com/search?keyword=杭州亚残运会备受期待)
-1. [现场视频：中方阻拦菲方挑衅船只](https://so.toutiao.com/search?keyword=现场视频：中方阻拦菲方挑衅船只)
-1. [美舰突然横插挤压中国军舰视频曝光](https://so.toutiao.com/search?keyword=美舰突然横插挤压中国军舰视频曝光)
-1. [巴以冲突已致双方超6100人死亡](https://so.toutiao.com/search?keyword=巴以冲突已致双方超6100人死亡)
 1. [哪部作品更能代表中国科幻实力](https://so.toutiao.com/search?keyword=哪部作品更能代表中国科幻实力)
+1. [重阳节的“数字密码”](https://so.toutiao.com/search?keyword=重阳节的“数字密码”)
+1. [现场视频：中方阻拦菲方挑衅船只](https://so.toutiao.com/search?keyword=现场视频：中方阻拦菲方挑衅船只)
+1. [胡锡进：“一狗犯错所有狗买单”对吗](https://so.toutiao.com/search?keyword=胡锡进：“一狗犯错所有狗买单”对吗)
+1. [女子称买烤鸭遇店员做假动作片肉](https://so.toutiao.com/search?keyword=女子称买烤鸭遇店员做假动作片肉)
+1. [美舰突然横插挤压中国军舰视频曝光](https://so.toutiao.com/search?keyword=美舰突然横插挤压中国军舰视频曝光)
 1. [鸿海集团回应富士康被税务部门调查](https://so.toutiao.com/search?keyword=鸿海集团回应富士康被税务部门调查)
 1. [警方辟谣针织厂老板克扣工资被杀](https://so.toutiao.com/search?keyword=警方辟谣针织厂老板克扣工资被杀)
-1. [15位中央巡视组组长全部亮相](https://so.toutiao.com/search?keyword=15位中央巡视组组长全部亮相)
+1. [倪妮“河南分妮”：喜提休假一周](https://so.toutiao.com/search?keyword=倪妮“河南分妮”：喜提休假一周)
 1. [美国起草涉巴以决议草案没呼吁停火](https://so.toutiao.com/search?keyword=美国起草涉巴以决议草案没呼吁停火)
-1. [十万伦敦人游行 高喊解放巴勒斯坦](https://so.toutiao.com/search?keyword=十万伦敦人游行+高喊解放巴勒斯坦)
-1. [加沙“地面战”为何已难以避免](https://so.toutiao.com/search?keyword=加沙“地面战”为何已难以避免)
-1. [高校该不该实行禁酒令](https://so.toutiao.com/search?keyword=高校该不该实行禁酒令)
 1. [以色列民众集会要求内塔尼亚胡下台](https://so.toutiao.com/search?keyword=以色列民众集会要求内塔尼亚胡下台)
-1. [以军要求加沙居民尽快撤离至南部](https://so.toutiao.com/search?keyword=以军要求加沙居民尽快撤离至南部)
-1. [女子称买烤鸭遇店员做假动作片肉](https://so.toutiao.com/search?keyword=女子称买烤鸭遇店员做假动作片肉)
-1. [媒体：美以缺席致开罗和平峰会无果](https://so.toutiao.com/search?keyword=媒体：美以缺席致开罗和平峰会无果)
-1. [俄媒：军事优势不再是以方可靠保障](https://so.toutiao.com/search?keyword=俄媒：军事优势不再是以方可靠保障)
+1. [德前总理：美国不许乌克兰接受和平](https://so.toutiao.com/search?keyword=德前总理：美国不许乌克兰接受和平)
+1. [中东战火再燃 巴以缘何冲突再起](https://so.toutiao.com/search?keyword=中东战火再燃+巴以缘何冲突再起)
+1. [十万伦敦人游行 高喊解放巴勒斯坦](https://so.toutiao.com/search?keyword=十万伦敦人游行+高喊解放巴勒斯坦)
+1. [可可西里一头狼被投喂变胖成网红](https://so.toutiao.com/search?keyword=可可西里一头狼被投喂变胖成网红)
+1. [美媒：中东战火打乱美国对中俄战略](https://so.toutiao.com/search?keyword=美媒：中东战火打乱美国对中俄战略)
+1. [张韶涵演唱会上正面硬刚主办方](https://so.toutiao.com/search?keyword=张韶涵演唱会上正面硬刚主办方)
+1. [谁给了东方甄选会员费199元的勇气](https://so.toutiao.com/search?keyword=谁给了东方甄选会员费199元的勇气)
 1. [伦敦“反犹太”仇恨犯罪激增](https://so.toutiao.com/search?keyword=伦敦“反犹太”仇恨犯罪激增)
 1. [青啤小便男子或涉破坏生产经营罪](https://so.toutiao.com/search?keyword=青啤小便男子或涉破坏生产经营罪)
-1. [男子当街施暴被市民联手制服](https://so.toutiao.com/search?keyword=男子当街施暴被市民联手制服)
-1. [德前总理：美国不许乌克兰接受和平](https://so.toutiao.com/search?keyword=德前总理：美国不许乌克兰接受和平)
-1. [“小便风波”青啤三厂：当地龙头](https://so.toutiao.com/search?keyword=“小便风波”青啤三厂：当地龙头)
-1. [可可西里拦车讨食网红狼团队扩大](https://so.toutiao.com/search?keyword=可可西里拦车讨食网红狼团队扩大)
-1. [股市周评：整体行情或将反复震荡](https://so.toutiao.com/search?keyword=股市周评：整体行情或将反复震荡)
-1. [谁给了东方甄选会员费199元的勇气](https://so.toutiao.com/search?keyword=谁给了东方甄选会员费199元的勇气)
-1. [美国货币基金“大逃杀”](https://so.toutiao.com/search?keyword=美国货币基金“大逃杀”)
+1. [因母胎血型不合女子怀孕3次都死胎](https://so.toutiao.com/search?keyword=因母胎血型不合女子怀孕3次都死胎)
 1. [胖东来收银员神似倪妮引网友围观](https://so.toutiao.com/search?keyword=胖东来收银员神似倪妮引网友围观)
+1. [“小便风波”青啤三厂：当地龙头](https://so.toutiao.com/search?keyword=“小便风波”青啤三厂：当地龙头)
+1. [巴以冲突已致双方超6100人死亡](https://so.toutiao.com/search?keyword=巴以冲突已致双方超6100人死亡)
+1. [意甲：国米3-0都灵暂登榜首](https://so.toutiao.com/search?keyword=意甲：国米3-0都灵暂登榜首)
+1. [2023苏州太湖马拉松开赛](https://so.toutiao.com/search?keyword=2023苏州太湖马拉松开赛)
+1. [意甲：罗马1-0绝杀蒙扎联赛三连胜](https://so.toutiao.com/search?keyword=意甲：罗马1-0绝杀蒙扎联赛三连胜)
+1. [女生被抱摔门牙断裂 男同学拒赔](https://so.toutiao.com/search?keyword=女生被抱摔门牙断裂+男同学拒赔)
+1. [巴勒斯坦亚残运会代表队出场](https://so.toutiao.com/search?keyword=巴勒斯坦亚残运会代表队出场)
+1. [15位中央巡视组组长全部亮相](https://so.toutiao.com/search?keyword=15位中央巡视组组长全部亮相)
+1. [联合国：加沙120名新生儿面临危险](https://so.toutiao.com/search?keyword=联合国：加沙120名新生儿面临危险)
+1. [官方：蛇类可以食用是谣言](https://so.toutiao.com/search?keyword=官方：蛇类可以食用是谣言)
+1. [90岁老人分手后去前女友家放火获刑](https://so.toutiao.com/search?keyword=90岁老人分手后去前女友家放火获刑)
+1. [埃塞妇女回国时儿子是航班飞行员](https://so.toutiao.com/search?keyword=埃塞妇女回国时儿子是航班飞行员)
+1. [广西一疯狗咬伤多人被警方击毙](https://so.toutiao.com/search?keyword=广西一疯狗咬伤多人被警方击毙)
+1. [中国经济积极因素积累增多](https://so.toutiao.com/search?keyword=中国经济积极因素积累增多)
+1. [3000点告破如何摆脱恐慌情绪](https://so.toutiao.com/search?keyword=3000点告破如何摆脱恐慌情绪)
+1. [记者调查第一学历歧视现象](https://so.toutiao.com/search?keyword=记者调查第一学历歧视现象)
+1. [可可西里拦车讨食网红狼团队扩大](https://so.toutiao.com/search?keyword=可可西里拦车讨食网红狼团队扩大)
+1. [谁在保卫3000点](https://so.toutiao.com/search?keyword=谁在保卫3000点)
+1. [顾客进店说怕狗主人转达后狗狗撤退](https://so.toutiao.com/search?keyword=顾客进店说怕狗主人转达后狗狗撤退)
+1. [加沙“地面战”为何已难以避免](https://so.toutiao.com/search?keyword=加沙“地面战”为何已难以避免)
+1. [马拉松最后一名的待遇](https://so.toutiao.com/search?keyword=马拉松最后一名的待遇)
+1. [专家称印度进行载人火箭点火测试](https://so.toutiao.com/search?keyword=专家称印度进行载人火箭点火测试)
+1. [海南多地将有强降雨](https://so.toutiao.com/search?keyword=海南多地将有强降雨)
+1. [商务部：中澳就世贸争端案达成共识](https://so.toutiao.com/search?keyword=商务部：中澳就世贸争端案达成共识)
+1. [老年团列车上跳唱3小时](https://so.toutiao.com/search?keyword=老年团列车上跳唱3小时)
+1. [沃特斯CBA首战惊艳全场](https://so.toutiao.com/search?keyword=沃特斯CBA首战惊艳全场)
+1. [中金公司：选举陈亮担任公司董事长](https://so.toutiao.com/search?keyword=中金公司：选举陈亮担任公司董事长)
+1. [直击杭州亚残运会开幕式](https://so.toutiao.com/search?keyword=直击杭州亚残运会开幕式)
+1. [杭州亚残运会备受期待](https://so.toutiao.com/search?keyword=杭州亚残运会备受期待)
+1. [高校该不该实行禁酒令](https://so.toutiao.com/search?keyword=高校该不该实行禁酒令)
+1. [以军要求加沙居民尽快撤离至南部](https://so.toutiao.com/search?keyword=以军要求加沙居民尽快撤离至南部)
+1. [媒体：美以缺席致开罗和平峰会无果](https://so.toutiao.com/search?keyword=媒体：美以缺席致开罗和平峰会无果)
+1. [俄媒：军事优势不再是以方可靠保障](https://so.toutiao.com/search?keyword=俄媒：军事优势不再是以方可靠保障)
+1. [男子当街施暴被市民联手制服](https://so.toutiao.com/search?keyword=男子当街施暴被市民联手制服)
+1. [股市周评：整体行情或将反复震荡](https://so.toutiao.com/search?keyword=股市周评：整体行情或将反复震荡)
+1. [美国货币基金“大逃杀”](https://so.toutiao.com/search?keyword=美国货币基金“大逃杀”)
 1. [巴基斯坦前总理谢里夫回国启动选战](https://so.toutiao.com/search?keyword=巴基斯坦前总理谢里夫回国启动选战)
 1. [驻法使馆提醒在法中国公民注意安全](https://so.toutiao.com/search?keyword=驻法使馆提醒在法中国公民注意安全)
-1. [倪妮“河南分妮”：喜提休假一周](https://so.toutiao.com/search?keyword=倪妮“河南分妮”：喜提休假一周)
-1. [张韶涵演唱会上正面硬刚主办方](https://so.toutiao.com/search?keyword=张韶涵演唱会上正面硬刚主办方)
-1. [广西一疯狗咬伤多人被警方击毙](https://so.toutiao.com/search?keyword=广西一疯狗咬伤多人被警方击毙)
-1. [老年团列车上跳唱3小时](https://so.toutiao.com/search?keyword=老年团列车上跳唱3小时)
 1. [赖岳谦：美方对赖清德发警告](https://so.toutiao.com/search?keyword=赖岳谦：美方对赖清德发警告)
-1. [90岁老人分手后去前女友家放火获刑](https://so.toutiao.com/search?keyword=90岁老人分手后去前女友家放火获刑)
 1. [媒体：青岛啤酒风波4大疑问需厘清](https://so.toutiao.com/search?keyword=媒体：青岛啤酒风波4大疑问需厘清)
 1. [李玟二姐称将追究侮辱诽谤言论](https://so.toutiao.com/search?keyword=李玟二姐称将追究侮辱诽谤言论)
-1. [女生被抱摔门牙断裂 男同学拒赔](https://so.toutiao.com/search?keyword=女生被抱摔门牙断裂+男同学拒赔)
 1. [打假博主探阳澄湖大闸蟹](https://so.toutiao.com/search?keyword=打假博主探阳澄湖大闸蟹)
 1. [中国盲人男子足球队备战亚残运会](https://so.toutiao.com/search?keyword=中国盲人男子足球队备战亚残运会)
-1. [美媒：中东战火打乱美国对中俄战略](https://so.toutiao.com/search?keyword=美媒：中东战火打乱美国对中俄战略)
 1. [这份重阳节海报文案很暖心](https://so.toutiao.com/search?keyword=这份重阳节海报文案很暖心)
 1. [经济新亮点涌现 消费潜力加速释放](https://so.toutiao.com/search?keyword=经济新亮点涌现+消费潜力加速释放)
 1. [看完《河边的错误》后的精神状态](https://so.toutiao.com/search?keyword=看完《河边的错误》后的精神状态)
@@ -56,7 +79,6 @@
 1. [杭州亚残运会为规模最大一届](https://so.toutiao.com/search?keyword=杭州亚残运会为规模最大一届)
 1. [学校回应男生校内晒秋裤被女生剪烂](https://so.toutiao.com/search?keyword=学校回应男生校内晒秋裤被女生剪烂)
 1. [小乔记录女儿第一次剃胎发](https://so.toutiao.com/search?keyword=小乔记录女儿第一次剃胎发)
-1. [中东战火再燃 巴以缘何冲突再起](https://so.toutiao.com/search?keyword=中东战火再燃+巴以缘何冲突再起)
 1. [女子坐店里被恶狗突袭](https://so.toutiao.com/search?keyword=女子坐店里被恶狗突袭)
 1. [媒体人调侃库里与文班跳球](https://so.toutiao.com/search?keyword=媒体人调侃库里与文班跳球)
 1. [驻伊拉克美军基地连续遭袭](https://so.toutiao.com/search?keyword=驻伊拉克美军基地连续遭袭)
@@ -94,7 +116,6 @@
 1. [好声音学员王泽鹏悼念李玟](https://so.toutiao.com/search?keyword=好声音学员王泽鹏悼念李玟)
 1. [河南卫视重阳奇妙游](https://so.toutiao.com/search?keyword=河南卫视重阳奇妙游)
 1. [记者：这赛季仍看好辽宁夺冠](https://so.toutiao.com/search?keyword=记者：这赛季仍看好辽宁夺冠)
-1. [商务部：中澳就世贸争端案达成共识](https://so.toutiao.com/search?keyword=商务部：中澳就世贸争端案达成共识)
 1. [行业人士热议5G-A发展应用与机遇](https://so.toutiao.com/search?keyword=行业人士热议5G-A发展应用与机遇)
 1. [15名院士领衔在武汉研讨爆破技术](https://so.toutiao.com/search?keyword=15名院士领衔在武汉研讨爆破技术)
 1. [5G应用从点状示范向规模化发展](https://so.toutiao.com/search?keyword=5G应用从点状示范向规模化发展)
@@ -165,7 +186,6 @@
 1. [女子与男友吵架怒划16万爱马仕包](https://so.toutiao.com/search?keyword=女子与男友吵架怒划16万爱马仕包)
 1. [国内油价或将下调 最多一箱省3.5元](https://so.toutiao.com/search?keyword=国内油价或将下调+最多一箱省3.5元)
 1. [黎巴嫩真主党：以方将付出高昂代价](https://so.toutiao.com/search?keyword=黎巴嫩真主党：以方将付出高昂代价)
-1. [顾客进店说怕狗主人转达后狗狗撤退](https://so.toutiao.com/search?keyword=顾客进店说怕狗主人转达后狗狗撤退)
 1. [央视记者直击以色列南部一军事基地](https://so.toutiao.com/search?keyword=央视记者直击以色列南部一军事基地)
 1. [美职联：迈阿密0-1夏洛特7场不胜](https://so.toutiao.com/search?keyword=美职联：迈阿密0-1夏洛特7场不胜)
 1. [木工跳水救人牺牲 儿子16年前溺亡](https://so.toutiao.com/search?keyword=木工跳水救人牺牲+儿子16年前溺亡)
